# laba_11_git

./: .gitignore  PROMPT_LOG.md  README.md
.github/workflows/: ci.yml
go_app/: .dockerignore  Dockerfile  go.mod  main.go  main_test.go
py_go_rs_services/: Makefile  docker-compose.yml
py_go_rs_services/go/: .dockerignore  Dockerfile  db.go  go.mod  loyalty.go  main.go  models.go  server.go  server_test.go
py_go_rs_services/python/: .dockerignore  Dockerfile  conftest.py  main.py  requirements-dev.txt  requirements.txt
py_go_rs_services/python/gateway/: client.py  config.py  lifespan.py  models.py  routes.py
py_go_rs_services/python/tests/: test_main.py
py_go_rs_services/rust/: Cargo.toml  Dockerfile
py_go_rs_services/rust/src/: loyalty.rs  main.rs
python_app/coffee_api/: .dockerignore  Dockerfile  app.py  coffee.db  models.py  pytest.ini  requirements.txt  routes.py  schemas.py  services.py
python_app/coffee_api/tests/: conftest.py  test_routes.py  test_services.py  test_unit.py
rust_app/coffee_users/: .dockerignore  Cargo.toml  Dockerfile  coffee_shop.db
rust_app/coffee_users/src/: db.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs  router.rs
rust_app/coffee_users/tests/: api_test.rs
