[package]
name    = "loyalty-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web  = "4"
env_logger = "0.11"
log        = "0.4"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
# R3: tokio removed — actix-web bundles its own tokio runtime.
# Adding tokio separately with "full" features was redundant.

[dev-dependencies]
actix-http = "3"